--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4470,4 +4470,8 @@
     <string name="vibration_title">Phone vibration</string>
     <string name="link_volume_ringtones">Link volumes</string>
     <string name="link_volume_mutes">Link mute states</string>
+
+    <!-- NFC Sound toggle strings -->
+    <string name="nfc_sound_toggle_title">Disable NFC Sounds</string>
+    <string name="nfc_sound_toggle_summary">Disables the NFC sound effects</string>
 </resources>
